<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#424141">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/sign_logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/logo_big"
        app:civ_circle_background_color="@color/main_color"
        app:layout_constraintBottom_toTopOf="@+id/sign_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sign_email"
        android:layout_width="165dp"
        android:layout_height="39dp"
        android:layout_marginTop="175dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="#E60B0B"
        android:drawableStart="@drawable/sign_email"
        android:drawablePadding="7dp"
        android:fontFamily="sans-serif-medium"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:text="@string/sign_email"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/sign_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_logo" />

    <Button
        android:id="@+id/sign_google"
        android:layout_width="165dp"
        android:layout_height="39dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="#FFFFFF"
        android:drawableStart="@drawable/google_logo"
        android:drawablePadding="1dp"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:text="@string/sign_google"
        android:textAllCaps="false"
        android:textColor="#B1AFAF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_email"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/sign_phone"
        android:layout_width="165dp"
        android:layout_height="39dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="#0FC7AA"
        android:drawableStart="@drawable/sign_phone"
        android:drawablePadding="3dp"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:text="@string/sign_phone"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_google" />

</androidx.constraintlayout.widget.ConstraintLayout>