<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/sky"
        app:layout_constraintTop_toTopOf="parent" >

        <View
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/paw_prints" />
        <View
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="120dp"
            android:background="@drawable/paw_prints" />
        <View
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="240dp"
            android:background="@drawable/paw_prints" />
        <View
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginStart="360dp"
            android:background="@drawable/paw_prints" />

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="490dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/dialog_layout"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Price"
        android:textSize="7sp"
        android:textColor="@color/gray"
        android:fontFamily="@string/font_family_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enPrice" />

    <EditText
        android:id="@+id/enCapital"
        android:layout_width="170sp"
        android:layout_height="25dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="Capital"
        android:inputType="number"
        android:textSize="13sp"
        android:textColor="@color/dim_gray"
        android:textColorHint="@color/gray"
        android:paddingStart="10dp"
        android:fontFamily="@string/font_family_light"
        app:layout_constraintEnd_toEndOf="@+id/enQuantity"
        app:layout_constraintStart_toStartOf="@+id/enQuantity"
        app:layout_constraintTop_toBottomOf="@+id/tQuantity" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/enCircleImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_launcher_background"
        android:background="@drawable/circle_outline"
        android:backgroundTint="@color/sky"
        app:layout_constraintBottom_toTopOf="@+id/enCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enName"
        android:layout_width="170dp"
        android:layout_height="25dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="Name"
        android:textSize="13sp"
        android:textColor="@color/dim_gray"
        android:textColorHint="@color/gray"
        android:paddingStart="10dp"
        android:fontFamily="@string/font_family_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tQRcode" />

    <EditText
        android:id="@+id/enQRcode"
        android:layout_width="170dp"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="QR code"
        android:textSize="13sp"
        android:textColor="@color/dim_gray"
        android:textColorHint="@color/gray"
        android:paddingStart="10dp"
        android:fontFamily="@string/font_family_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eaSubcategory" />

    <EditText
        android:id="@+id/enQuantity"
        android:layout_width="170dp"
        android:layout_height="25dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="Quantity"
        android:inputType="number"
        android:textSize="13sp"
        android:textColor="@color/dim_gray"
        android:textColorHint="@color/gray"
        android:paddingStart="10dp"
        android:fontFamily="@string/font_family_light"
        app:layout_constraintEnd_toEndOf="@+id/enName"
        app:layout_constraintStart_toStartOf="@+id/enName"
        app:layout_constraintTop_toBottomOf="@+id/tName" />

    <EditText
        android:id="@+id/enPrice"
        android:layout_width="170sp"
        android:layout_height="25dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="Price"
        android:inputType="number"
        android:textSize="13sp"
        android:textColor="@color/dim_gray"
        android:textColorHint="@color/gray"
        android:paddingStart="10dp"
        android:fontFamily="@string/font_family_light"
        app:layout_constraintEnd_toEndOf="@+id/enCapital"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/enCapital"
        app:layout_constraintTop_toBottomOf="@+id/tCapital" />

    <EditText
        android:id="@+id/enCriticalValue"
        android:layout_width="170dp"
        android:layout_height="25dp"
        android:background="@drawable/round_corner"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="Critical Value"
        android:inputType="number"
        android:textSize="13sp"
        android:textColor="@color/dim_gray"
        android:textColorHint="@color/gray"
        android:paddingStart="10dp"
        android:fontFamily="@string/font_family_light"
        app:layout_constraintEnd_toEndOf="@+id/enPrice"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/enPrice"
        app:layout_constraintTop_toBottomOf="@+id/tPrice" />

    <Button
        android:id="@+id/enUpdate"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/shape_rounded"
        android:backgroundTint="@color/green"
        android:text="Update"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/espStatus" />

    <Button
        android:id="@+id/enCancel"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/shape_rounded"
        android:backgroundTint="@color/imperial"
        android:text="Cancel"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/enUpdate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/espStatus" />

    <TextView
        android:id="@+id/enCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Category"
        android:textSize="10sp"
        android:textColor="@color/gray"
        android:fontFamily="@string/font_family_medium"
        app:layout_constraintBottom_toTopOf="@+id/espCategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enCircleImageView" />

    <TextView
        android:id="@+id/enSubcategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Subcategory"
        android:textSize="10sp"
        android:textColor="@color/gray"
        android:fontFamily="@string/font_family_medium"
        app:layout_constraintBottom_toTopOf="@+id/eaSubcategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/espCategory" />

    <TextView
        android:id="@+id/enStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Status"
        android:textSize="13sp"
        android:textColor="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/espStatus"
        app:layout_constraintStart_toStartOf="@+id/enCriticalValue"
        app:layout_constraintTop_toTopOf="@+id/espStatus" />

    <TextView
        android:id="@+id/tQRcode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="QR Code"
        android:textSize="7sp"
        android:textColor="@color/gray"
        android:fontFamily="@string/font_family_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enQRcode" />

    <TextView
        android:id="@+id/tQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Quantity"
        android:textSize="7sp"
        android:textColor="@color/gray"
        android:fontFamily="@string/font_family_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enQuantity" />

    <TextView
        android:id="@+id/tCapital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Capital"
        android:textSize="7sp"
        android:textColor="@color/gray"
        android:fontFamily="@string/font_family_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enCapital" />

    <TextView
        android:id="@+id/tCriticalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Critical Value"
        android:textSize="7sp"
        android:textColor="@color/gray"
        android:fontFamily="@string/font_family_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enCriticalValue" />

    <TextView
        android:id="@+id/tName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name"
        android:textSize="7sp"
        android:textColor="@color/gray"
        android:fontFamily="@string/font_family_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enName" />

    <Spinner
        android:id="@+id/espStatus"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:contextClickable="false"
        android:textColor="@color/white"
        android:backgroundTint="@color/white"

        app:layout_constraintEnd_toEndOf="@+id/enCriticalValue"
        app:layout_constraintTop_toBottomOf="@+id/tCriticalValue" />

    <TextView
        android:id="@+id/espCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="Category"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:fontFamily="@string/font_family_condensed"
        app:layout_constraintBottom_toTopOf="@+id/enSubcategory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enCategory" />

    <TextView
        android:id="@+id/eaSubcategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:text="Subcategory"
        android:textColor="@color/white"
        android:fontFamily="@string/font_family_condensed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enSubcategory" />

</androidx.constraintlayout.widget.ConstraintLayout>